Add Terms and Privacy links to footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -287,7 +287,11 @@
     
     <footer>
         <div class="container">
-            <p>© 2026 Divine Link by Orekun Media. All rights reserved.</p>
+            <p>© 2026 Divine Link by O'Rekun Media. All rights reserved.</p>
+            <p style="margin-top: 15px;">
+                <a href="/terms.html" style="color: var(--text-muted); margin: 0 10px;">Terms of Service</a> | 
+                <a href="/privacy.html" style="color: var(--text-muted); margin: 0 10px;">Privacy Policy</a>
+            </p>
             <p style="margin-top: 10px; font-size: 0.9rem;">
                 macOS 14.0+ required
             </p>
