Integrate Stripe Payment Link for Premium subscription

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         <li>Priority support</li>
                         <li>Use on 2 devices</li>
                     </ul>
-                    <a href="#" class="btn btn-primary" id="subscribe-btn">Subscribe</a>
+                    <a href="https://buy.stripe.com/8x228raJOceGbI50hn5AQ00" class="btn btn-primary">Subscribe</a>
                 </div>
             </div>
         </div>
@@ -298,12 +298,5 @@
         </div>
     </footer>
     
-    <!-- Stripe integration will go here -->
-    <script>
-        document.getElementById('subscribe-btn').addEventListener('click', function(e) {
-            e.preventDefault();
-            alert('Stripe integration coming soon!');
-        });
-    </script>
 </body>
 </html>
