Update website clarity, add ads disclosure, update legal pages
Website:
- Fix hero text: "let Divine Link do the work whilst you focus on the message"
- Clarify app purpose: "detects Bible verses during preaching"
- Add "Includes sidebar ads" to Free (Mercy) tier
- Add "No advertisements" to Grace and Love tiers
- Add advertisements row to comparison table

Privacy Policy:
- Add Section 11: Advertising (11.1-11.3)
- Covers ad data collection and opt-out via upgrade

Terms of Service:
- Add Section 6: Advertisements (Free Tier)
- Specifies ad display agreement and no-blocking clause

Both legal pages updated to 17 January 2026

--- a/privacy.html
+++ b/privacy.html
@@ -103,7 +103,7 @@
     <div class="container">
         <div class="content">
             <h1>Privacy Policy</h1>
-            <p class="last-updated">Last Updated: 31 January 2026</p>
+            <p class="last-updated">Last Updated: 17 January 2026</p>
 
             <p>O'Rekun Media ("Company", "we", "us", "our") operates the Divine Link application. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our Software.</p>
 
@@ -246,13 +246,29 @@
                 <li><strong>Supabase:</strong> Authentication and database - <a href="https://supabase.com/privacy" target="_blank">Privacy Policy</a></li>
             </ul>
 
-            <h2>11. Cookies and Tracking</h2>
-            <p>The Divine Link desktop application does not use cookies. Our website may use essential cookies for functionality. We do not use advertising or tracking cookies.</p>
+            <h2>11. Advertising</h2>
+            <h3>11.1 Free Tier Advertisements</h3>
+            <p>The free version of Divine Link (Mercy tier) displays advertisements within the application sidebar. These advertisements help support the continued development and maintenance of the free version.</p>
+            
+            <h3>11.2 Advertisement Data</h3>
+            <p>Our advertising system may collect:</p>
+            <ul>
+                <li><strong>Ad impressions:</strong> Which advertisements are displayed</li>
+                <li><strong>Ad interactions:</strong> Whether advertisements are clicked</li>
+                <li><strong>Device information:</strong> General device type for ad targeting</li>
+            </ul>
+            <p>We do not share personal identifying information with advertisers. Ad data is collected in aggregate form.</p>
+            
+            <h3>11.3 Opting Out of Advertisements</h3>
+            <p>You can remove advertisements by upgrading to a paid subscription (Grace or Love tier). Paid subscribers do not see any advertisements within the application.</p>
 
-            <h2>12. Changes to This Policy</h2>
+            <h2>12. Cookies and Tracking</h2>
+            <p>The Divine Link desktop application does not use cookies. Our website may use essential cookies for functionality. We do not use advertising or tracking cookies on our website.</p>
+
+            <h2>13. Changes to This Policy</h2>
             <p>We may update this Privacy Policy from time to time. We will notify you of significant changes via email or through the Software. Your continued use after changes become effective constitutes acceptance of the revised policy.</p>
 
-            <h2>13. Contact Us</h2>
+            <h2>14. Contact Us</h2>
             <p>For questions about this Privacy Policy or our data practices, contact us at:</p>
             <p>
                 <strong>O'Rekun Media</strong><br>
