--- a/terms.html
+++ b/terms.html
@@ -90,7 +90,7 @@
     <div class="container">
         <div class="content">
             <h1>Terms of Service</h1>
-            <p class="last-updated">Last Updated: 31 January 2026</p>
+            <p class="last-updated">Last Updated: 17 January 2026</p>
 
             <p>Welcome to Divine Link. These Terms of Service ("Terms") govern your use of the Divine Link application ("App", "Software", "Service") provided by O'Rekun Media ("Company", "we", "us", "our"). By downloading, installing, or using Divine Link, you agree to be bound by these Terms.</p>
 
@@ -155,10 +155,19 @@
                 <li>We are not obligated to provide updates indefinitely</li>
             </ul>
 
-            <h2>6. Intellectual Property</h2>
+            <h2>6. Advertisements (Free Tier)</h2>
+            <p>The free version of Divine Link (Mercy tier) includes sidebar advertisements. By using the free version, you agree to:</p>
+            <ul>
+                <li>Display of advertisements within the application interface</li>
+                <li>Collection of anonymous ad-related analytics (impressions, interactions)</li>
+                <li>Not attempt to block, circumvent, or interfere with the display of advertisements</li>
+            </ul>
+            <p>Paid subscribers (Grace and Love tiers) receive an ad-free experience. Advertisement removal is a benefit of paid subscription and is not available for free tier users.</p>
+
+            <h2>7. Intellectual Property</h2>
             <p>Divine Link, including all content, features, and functionality, is owned by O'Rekun Media and is protected by copyright, trademark, and other intellectual property laws. Your subscription grants you a licence to use the Software; it does not transfer any ownership rights.</p>
 
-            <h2>7. Disclaimer of Warranties</h2>
+            <h2>8. Disclaimer of Warranties</h2>
             <p>THE SOFTWARE IS PROVIDED "AS IS" AND "AS AVAILABLE" WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO:</p>
             <ul>
                 <li>Implied warranties of merchantability</li>
@@ -169,7 +178,7 @@
             </ul>
             <p>We do not warrant that the Software will meet your specific requirements or that defects will be corrected.</p>
 
-            <h2>8. Limitation of Liability</h2>
+            <h2>9. Limitation of Liability</h2>
             <div class="critical">
                 <p>TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, IN NO EVENT SHALL O'REKUN MEDIA, ITS DIRECTORS, EMPLOYEES, PARTNERS, OR AFFILIATES BE LIABLE FOR:</p>
                 <ul>
@@ -183,7 +192,7 @@
                 <p><strong>OUR TOTAL LIABILITY SHALL NOT EXCEED THE AMOUNT YOU PAID FOR THE SOFTWARE IN THE TWELVE (12) MONTHS PRECEDING THE CLAIM.</strong></p>
             </div>
 
-            <h2>9. Your Responsibilities and Assumption of Risk</h2>
+            <h2>10. Your Responsibilities and Assumption of Risk</h2>
             <p>You acknowledge and agree that:</p>
             <ul>
                 <li>You are solely responsible for maintaining adequate internet connectivity</li>
@@ -194,7 +203,7 @@
                 <li>Any loss of functionality due to your failure to maintain connectivity or update the Software is your responsibility</li>
             </ul>
 
-            <h2>10. Termination</h2>
+            <h2>11. Termination</h2>
             <p>We may terminate or suspend your access immediately, without prior notice or liability, for any reason, including:</p>
             <ul>
                 <li>Breach of these Terms</li>
@@ -204,7 +213,7 @@
             </ul>
             <p>Upon termination, your right to use the Software will immediately cease. No refunds will be provided for termination due to breach of Terms.</p>
 
-            <h2>11. Refund Policy</h2>
+            <h2>12. Refund Policy</h2>
             <p>Due to the digital nature of the Software:</p>
             <ul>
                 <li>All sales are final once the subscription period begins</li>
@@ -213,16 +222,16 @@
                 <li>No refunds will be issued for partial subscription periods or early cancellation</li>
             </ul>
 
-            <h2>12. Changes to Terms</h2>
+            <h2>13. Changes to Terms</h2>
             <p>We reserve the right to modify these Terms at any time. We will notify you of significant changes via email or through the Software. Your continued use of the Software after changes become effective constitutes acceptance of the revised Terms.</p>
 
-            <h2>13. Governing Law and Jurisdiction</h2>
+            <h2>14. Governing Law and Jurisdiction</h2>
             <p>These Terms shall be governed by and construed in accordance with the laws of England and Wales, without regard to conflict of law principles. Any disputes arising from these Terms shall be subject to the exclusive jurisdiction of the courts of England and Wales.</p>
 
-            <h2>14. Severability</h2>
+            <h2>15. Severability</h2>
             <p>If any provision of these Terms is found to be unenforceable or invalid, that provision shall be limited or eliminated to the minimum extent necessary, and the remaining provisions shall remain in full force and effect.</p>
 
-            <h2>15. Contact Information</h2>
+            <h2>16. Contact Information</h2>
             <p>For questions about these Terms, please contact us at:</p>
             <p>
                 <strong>O'Rekun Media</strong><br>
