Update website: Add Messages API feature and Premium tier benefits
- Added Direct API Integration feature card
- Updated Audience Screen push descriptions (Keyboard vs Messages API)
- Added comparison table rows for API features
- Updated showcase with Messages API benefit
- Clarified tier differences: Free uses keyboard, Premium uses API

--- a/index.html
+++ b/index.html
@@ -993,7 +993,12 @@
                 <div class="feature-card">
                     <div class="feature-icon">📺</div>
                     <h3>ProPresenter Integration</h3>
-                    <p>Push to Stage Display or Audience Screen with one click. Uses ProPresenter's native Bible feature for perfect formatting.</p>
+                    <p>Push to Stage Display or Audience Screen with one click. Premium users get direct API integration for faster, more reliable display.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">⚡</div>
+                    <h3>Direct API Integration <span style="font-size: 0.7em; color: var(--mercy); font-weight: normal;">(Premium)</span></h3>
+                    <p>Messages API integration sends scriptures directly to ProPresenter without keyboard simulation. Faster, more reliable, works in background.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">📖</div>
@@ -1040,6 +1045,10 @@
                             <span class="check">✓</span>
                             <span><strong>Works with accents</strong> — Trained on diverse speaking styles</span>
                         </li>
+                        <li>
+                            <span class="check">✓</span>
+                            <span><strong>Direct API integration</strong> <span style="color: var(--grace);">(Premium)</span> — Messages API sends scriptures instantly without keyboard simulation</span>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -1072,7 +1081,7 @@
                 <div class="step">
                     <div class="step-number">4</div>
                     <h4>Display</h4>
-                    <p>One click pushes the verse to ProPresenter for instant display.</p>
+                    <p>One click pushes the verse to ProPresenter. Premium users get direct API integration for faster, background-safe display.</p>
                 </div>
             </div>
         </div>
@@ -1101,7 +1110,8 @@
                         <li><span class="check">✓</span> 8 sessions per month</li>
                         <li><span class="check">✓</span> Unlimited detections</li>
                         <li style="color: var(--text-muted);"><span style="color: #f59e0b; margin-right: 12px;">ℹ</span> Includes sidebar ads</li>
-                        <li class="disabled"><span class="cross">✗</span> Push to Audience Screen</li>
+                        <li class="disabled"><span class="cross">✗</span> Push to Audience Screen (API)</li>
+                        <li style="color: var(--text-muted); font-size: 0.9em;"><span style="color: #f59e0b; margin-right: 8px;">ℹ</span> Keyboard automation available</li>
                         <li class="disabled"><span class="cross">✗</span> Additional translations</li>
                     </ul>
                     <a href="releases/DivineLink-latest.zip" class="btn btn-mercy">Download Free</a>
@@ -1117,7 +1127,8 @@
                     <ul>
                         <li><span class="check">✓</span> Everything in Mercy</li>
                         <li><span class="check">✓</span> <strong>No advertisements</strong></li>
-                        <li><span class="check">✓</span> <strong>Push to Audience Screen</strong></li>
+                        <li><span class="check">✓</span> <strong>Push to Audience Screen (Messages API)</strong></li>
+                        <li><span class="check">✓</span> <strong>Direct API integration</strong> <span style="font-size: 0.85em; color: var(--mercy);">(no keyboard needed)</span></li>
                         <li><span class="check">✓</span> All Bible translations</li>
                         <li><span class="check">✓</span> Unlimited sessions</li>
                         <li><span class="check">✓</span> Verse-by-verse push</li>
@@ -1140,6 +1151,7 @@
                     <ul>
                         <li><span class="check">✓</span> Everything in Grace</li>
                         <li><span class="check">✓</span> <strong>No advertisements</strong></li>
+                        <li><span class="check">✓</span> <strong>Messages API integration</strong></li>
                         <li><span class="check">✓</span> <strong>Pastor profiles</strong></li>
                         <li><span class="check">✓</span> <strong>Session history & export</strong></li>
                         <li><span class="check">✓</span> Speech corrections per pastor</li>
@@ -1206,6 +1218,18 @@
                         </tr>
                         <tr>
                             <td>Push to Audience Screen</td>
+                            <td>Keyboard only</td>
+                            <td class="check">Messages API</td>
+                            <td class="check">Messages API</td>
+                        </tr>
+                        <tr>
+                            <td>Direct API integration</td>
+                            <td class="cross">✗</td>
+                            <td class="check">✓</td>
+                            <td class="check">✓</td>
+                        </tr>
+                        <tr>
+                            <td>Background-safe (no window focus)</td>
                             <td class="cross">✗</td>
                             <td class="check">✓</td>
                             <td class="check">✓</td>
