Add release notes page with accordion changelog and version badge in footer

--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
                     <a href="#features">Features</a>
                     <a href="#how-it-works">How It Works</a>
                     <a href="#pricing">Pricing</a>
-                    <a href="#comparison">Compare</a>
+                    <a href="/releases.html">Release Notes</a>
                     <a href="releases/DivineLink-latest.zip" class="nav-cta">Download</a>
                 </nav>
             </div>
@@ -1337,10 +1337,11 @@
                 <div class="footer-links">
                     <a href="/terms.html">Terms of Service</a>
                     <a href="/privacy.html">Privacy Policy</a>
+                    <a href="/releases.html">Release Notes</a>
                     <a href="mailto:support@divinelink.app">Contact Support</a>
                 </div>
                 <div class="footer-copy">
-                    © 2026 Divine Link by O'Rekun Media. macOS 13.0+ required.
+                    © 2026 Divine Link by O'Rekun Media • <span style="background: rgba(224, 122, 43, 0.15); padding: 4px 12px; border-radius: 50px; font-size: 0.8rem; color: #F59E4C; font-weight: 600;">v1.1.0</span>
                 </div>
             </div>
         </div>
